# 42sh

./: 42sh  CMakeLists.txt  Makefile  bquote2.c  builtin.c  extras.c  extras2.c  fortytwosh.h  free.c  ft_builtin_support.c  ft_excve.c  func.c  get_dir.c  get_line.c  history.c  main.c  new.c  non_canonical.c  non_canonical1.c  non_canonical2.c  non_canonical3.c  pipes.c  redirect_heredoc.c  redirection.c  redirection_support.c  shell.c  signals.c  variables.c  vars.c
libft/: ._Makefile  ._ft_abs.c  ._ft_atoi.c  ._ft_bzero.c  ._ft_c2da.c  ._ft_getfo.c  ._ft_isalnum.c  ._ft_isalpha.c  ._ft_isascii.c  ._ft_isdigit.c  ._ft_isprint.c  ._ft_iswhitespace.c  ._ft_itoa.c  ._ft_itoa_base.c  ._ft_lstadd.c  ._ft_lstnew.c  ._ft_memalloc.c  ._ft_memccpy.c  ._ft_memchr.c  ._ft_memcmp.c  ._ft_memcpy.c  ._ft_memdel.c  ._ft_memmove.c  ._ft_memset.c  ._ft_putchar.c  ._ft_putchar_fd.c  ._ft_putendl.c  ._ft_putendl_fd.c  ._ft_putnbr.c  ._ft_putnbr_base.c  ._ft_putnbr_fd.c  ._ft_putstr.c  ._ft_putstr_fd.c  ._ft_strbcut.c  ._ft_strcat.c  ._ft_strccut.c  ._ft_strchr.c  ._ft_strclr.c  ._ft_strcmp.c  ._ft_strcpy.c  (+52 more)
